--- a/asset/css/usuarios.css
+++ b/asset/css/usuarios.css
@@ -11,7 +11,7 @@
   background-image:url(
 http://semantic-ui.com/images/wireframe/image.png);
 }
-#navegacion .container div{
+#nav .container div{
   color:white;
 }
 .imagen{
